# gob_sh

./: Cargo.toml  TODO.md  readme.md
src/: args.rs  channel.rs  cursor.rs  data.rs  exec.rs  expr.rs  future_util.rs  guess_manager.rs  highlight.rs  inputs.rs  main.rs  parser.rs  partial.rs  prompt.rs  settings.rs  shell.rs  statement.rs  store.rs  str_util.rs  tab_complete.rs  ui.rs
tests/: t1.rush  t2.rush  你们.rush
