[package]
name = "gob_ion"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bogobble={path="../../mlibs/bogobble/"}
err_tools={path="../../mlibs/err_tools/"}
anyhow = "1.0.34"
glob = "0.3.0"
termion = "1.5.5"
ctrlc = "3.1.7"
console = "0.14.0"
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.8"
chrono = "0.4.19"
