[package]
name = "ru_shell"
version = "0.1.1"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
license = "MIT" 
readme = "readme.md"
keywords = ["shell","parser","grammar"]
description = "A Shell built around a semantic grammar"
repository ="https://github.com/storyfeet/gob_sh"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bogobble={path="../../mlibs/bogobble/"}
err_tools="0.1.0"
anyhow = "1.0.34"
glob = "0.3.0"
termion = "1.5.5"
ctrlc = "3.1.7"
console = "0.14.0"
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.8"
chrono = "0.4.19"
clap = "2.33.3"


ru_complete = {path="../ru_complete/"}
tokio = { version = "1", features = ["full"] }
